# imgkit

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.d.ts  index.js  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml  docs.yml
benchmarks/: 10mb_bench.ts  bench.ts  compare_jpeg.ts  concurrent_test.ts  exif_bench.ts  final_comparison.ts  image-hash-bench.ts  quick_bench.ts  tensor-benchmark.ts  webp_bench.ts
docs/: changelog.md  index.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: blurhash.md  crop.md  exif.md  image-hash.md  index.md  metadata.md  resize.md  tensor.md  thumbhash.md  to-jpeg.md  to-png.md  to-webp.md  transform.md  types.md
docs/examples/: api-endpoint.md  basic-usage.md  batch-processing.md  cropping.md  exif-metadata.md  heic-conversion.md  image-hash.md  index.md  tensor.md  thumbhash.md
docs/guide/: architecture.md  async-sync.md  bun-executable.md  error-handling.md  formats.md  heic.md  index.md  installation.md  performance.md  quick-start.md  resizing.md  tensor.md  transformations.md
examples/: README.md  api-endpoint.ts  basic-usage.ts  batch-processing.ts  heic-conversion.ts  package.json
rust/src/: crop.rs  decode.rs  encode.rs  error.rs  lib.rs  metadata_write.rs  resize.rs  tensor.rs  transform.rs  types.rs
rust/src/decode/: generic.rs  heic.rs  jpeg.rs  mod.rs  webp.rs
rust/src/metadata/: gif.rs  heic.rs  jpeg.rs  mod.rs  other.rs  png.rs  utils.rs  webp.rs
src/: converters.ts  index.ts  loader.ts  types.ts
src/api/: blurhash.ts  crop.ts  encode.ts  exif.ts  image-hash.ts  index.ts  metadata.ts  resize.ts  tensor.ts  thumbhash.ts  transform.ts
src/cli/: bun-setup.ts
test/: exif.test.ts  heic.test.ts  index.test.ts
test/local/: exif.test.ts  heic.test.ts  image-hash.test.ts  index.test.ts  thumbhash.test.ts
