[package]
name = "image-turbo"
version = "1.2.0"
edition = "2021"
license = "MIT"
authors = ["Aissam Irhir <aissamirhir@gmail.com>"]
description = "High-performance image processing for Bun and Node.js"

[lib]
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
# napi-rs bindings
napi = { version = "2", features = ["async", "napi8"] }
napi-derive = "2"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp", "bmp", "ico", "tiff"] }
fast_image_resize = { version = "5", features = ["image", "rayon"] }

# TurboJPEG - libjpeg-turbo bindings (THE fastest JPEG codec with SIMD)
# Uses SSE2/AVX2/NEON for 2-6x faster encode/decode than pure Rust
turbojpeg = { version = "1.3", features = ["image"] }

# MozJPEG - for shrink-on-load support (decode at reduced resolution)
# Fallback for shrink-on-load since turbojpeg doesn't support it
mozjpeg = "0.10"

# Multi-threading
rayon = "1.10"

# WebP support
webp = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Error handling
thiserror = "2"

# For blurhash generation
blurhash = "0.2"

# HEIC/HEIF support via libheif (uses system-installed libheif)
# Only enabled on macOS (Homebrew has latest libheif 1.20+)
# Linux distros have older libheif versions, so disabled there
libheif-rs = { version = "2.5", default-features = false, features = ["v1_17"], optional = true }

[features]
default = []
heic = ["libheif-rs"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
