[package]
name = "image-turbo"
version = "1.8.0"
edition = "2021"
license = "MIT"
authors = ["Aissam Irhir <aissamirhir@gmail.com>"]
description = "High-performance image processing for Bun and Node.js"

[lib]
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
# napi-rs bindings (v3 - with streaming, better async, lifetime support)
napi = { version = "3.8.2", features = ["async", "napi8"] }
napi-derive = "3.5.1"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp", "bmp", "ico", "tiff"] }
fast_image_resize = { version = "5", features = ["image", "rayon"] }

# TurboJPEG - libjpeg-turbo bindings (THE fastest JPEG codec with SIMD)
# Uses SSE2/AVX2/NEON for 2-6x faster encode/decode than pure Rust
turbojpeg = { version = "1.3", features = ["image"] }

# MozJPEG - for shrink-on-load support (decode at reduced resolution)
# Fallback for shrink-on-load since turbojpeg doesn't support it
mozjpeg = "0.10"

# Multi-threading
rayon = "1.10"

# WebP support
webp = "0.3"

# Low-level libwebp bindings for shrink-on-load optimization
# Enables use_scaling for decoding directly to target resolution
libwebp-sys2 = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Error handling
thiserror = "2"

# For blurhash generation
blurhash = "0.2"

# For thumbhash generation (better placeholders with alpha support)
thumbhash = "0.1"

# For perceptual hashing (pHash, dHash, aHash) - image similarity detection
image_hasher = "2.0"

# For EXIF/metadata writing (WebP, JPEG, PNG)
img-parts = "0.3"

# HEIC/HEIF support via libheif (uses system-installed libheif)
# Only enabled on macOS (Homebrew has latest libheif 1.20+)
# Linux distros have older libheif versions, so disabled there
libheif-rs = { version = "2.5", default-features = false, features = ["v1_17"], optional = true }

[features]
default = []
heic = ["libheif-rs"]

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
